--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "GP_SUB.C": "cpp",
-        "GP_SUB.H": "cpp"
+        "GP_SUB.H": "cpp",
+        "func_def.h": "c"
     }
 }
