--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
         "gp_sub.c": "c",
         "gp_sub.h": "c",
         "func_def.h": "c",
-        "GP_SUB.C": "cpp"
+        "GP_SUB.H": "cpp"
     }
 }
